--- a/styles/custom.css
+++ b/styles/custom.css
@@ -35,7 +35,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 10;
+    z-index: -10;
     background-color: black;
     animation-name: reveal_out;
     animation-duration: 2s;
@@ -47,12 +47,16 @@
     left: 37%;
     height: auto;
     width: 25%;
-    z-index: 10;
+    z-index: -10;
     animation-name: reveal_out;
     animation-duration: 2s;
   }
   
   @keyframes reveal_out {
-      0%   {opacity: 1;}
-      100%  {opacity: 0;}
+      0%   {opacity: 1;
+        z-index: 10;
+      }
+      100%  {opacity: 0;
+        z-index: -10;
+      }
   }
