--- a/styles/custom.css
+++ b/styles/custom.css
@@ -69,9 +69,52 @@
   background: black;
 }
 
-.navBackground{
+.blackBackground{
   background-color: black;
 }
+.loginFrame{
+  position: absolute;
+  height: 50%;
+  width: 20%;
+  top: 25%;
+  left: 40%;
+  border-radius: 40px;
+  background-color: #140004;
+  box-shadow: 0 0 25px #ff96ad, 0 0 50px #ff96ad, 0 0 200px #ff96ad;
+}
+
+.loginFrameIco{
+  position: absolute;
+  padding: 0.5%;
+  z-index: 1;
+  height: auto;
+  width: 40%;
+  left: 30%;
+  top: 5%;
+}
+
+.btn-glow{
+  position: absolute;
+  box-shadow: 0 0 25px #ff96ad;
+  background: #000001;
+  width: 20%;
+  height: 10%;
+  border-radius: 10px;
+  top: 70%;
+  left: 40%;
+}
+
+.btn-glow:hover{
+  box-shadow: 0 0 25px #ff96ad, 0 0 50px #ff96ad, 0 0 200px #ff96ad;
+}
+
+#loginButtonText{
+  font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+  color: #ff96ad;
+}
+
+
+
 .navIco{
   padding: 0.5%;
   z-index: 1;
